src/components/Layout/Pages/ProjectPage/ProjectElement.module.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.outer {
  border: 1px solid white;
  padding: 20px;
  padding-top: 3px;
  border-radius: 0 0 20px 20px;
  height: 185px;
}

.outer:hover {
  cursor: pointer;
}

.card-header {
  display: flex;
  border-bottom: 2px solid white;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 5px;
}
.card-header p {
  display: flex;
  align-self: flex-start;
  font-size: 40px;
  line-height: 0;
  margin-top: 10px;
}
.card-main {
  display: flex;
  justify-content: space-between;
  /* align-items: center; */
}

.card-main section {
  text-align: justify;
  margin-right: 1%;
}
.card-main .card-list {
  align-self: start;
  padding-top: 10px;
}
.card-main li {
  list-style: none;
  font-size: 19px;
}

.card-main img {
  /* width: 100px; */
  height: 130px;
  width: 130px;
  border-radius: 0 0 20px 0;
}

.card-description {
  width: 73%;
  height: 130px;
  /* line-height: 10px; */
  /* overflow-x: hidden; */
  overflow-y: hidden;
  white-space: normal;
  text-overflow: ellipsis;
  margin-top: 5px;
}

.card-description * {
  /* margin-top: 10px; */
  font-size: 19px;
  font-weight: normal;
}
.card-description li {
  margin-left: 10px;
  list-style: inside;
}

.card-list {
  display: flex;
  flex-direction: column;
  align-self: center;
  padding-right: 10px;
}

@media (max-width: 1000px) {
  .card-main {
    gap: 10px;
  }
  .card-header p {
    font-size: 35px;
  }
}

@media (max-width: 800px) {
  .outer {
    padding: 12px;
    padding-top: 3px;
  }
  .card-technologies {
    font-size: 90%;
  }
  .card-header p {
    top: -15%;
    font-size: 30px;
  }
}

@media (max-width: 600px) {
  .card-header {
    font-size: 13px;
  }
  .card-main {
    display: grid;
    grid-column: 2;
    grid-row: 2;
    gap: 5px;
  }
  .card-list li {
    font-size: 12px;
  }

  .card-description *,
  .card-description li {
    font-size: 12px;
  }
  .card-main .card-description {
    text-align: left;
    display: flex;
    grid-column: 1/2;
    grid-row: 2/3;
    width: 100%;
    height: 110px;
  }
  .card-main .card-list {
    font-size: 12px;
    display: flex;
    flex-direction: row;
    gap: 10px;
    grid-column: 1/2;
    grid-row: 1/2;
    align-self: start;
    overflow-x: hidden;
  }

  .card-main img {
    grid-column: 2/3;
    grid-row: 1/3;
  }
}
@media (max-width: 400px) {
  .card-header {
    margin-bottom: 5px;
  }
  .card-description * {
    font-size: 10px;
  }
}
@media (max-width: 350px) {
  .github {
    font-size: 9px;
    margin-right: 10px;
  }
  .card-main .card-description {
    margin-top: 0;
    height: 92px;
  }
}

